# share-market-engine

./: .gitignore  CMakeLists.txt  README.md  _repo_sync.ps1  profile.sh  pyproject.toml
agents/: __init__.py  base.py  market_maker.py  random_agent.py
bindings/: CMakeLists.txt  py_exchange.cpp  test_bindings.py
dashboard/: README.md
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js
dashboard/frontend/src/: App.jsx  index.css  main.jsx
dashboard/frontend/src/components/: AgentPanel.jsx  LatencyPanel.jsx  OrderBook.jsx  PriceChart.jsx  Stats.jsx  TradeFeed.jsx
dashboard/server/: app.py
data/: __init__.py  backtest.py  databento.py  hawkes.py  replay.py  scenarios.py  tcp_feeder.py
data/sample_data/: databento_sample.csv  lobster_sample.csv
engine/: CMakeLists.txt
engine/bench/: CMakeLists.txt  bench_matching.cpp  bench_order_book.cpp
engine/src/: allocators.hpp  binary_protocol.hpp  matching_engine.cpp  matching_engine.hpp  memory_pool.hpp  multi_asset_engine.cpp  multi_asset_engine.hpp  order_book.cpp  order_book.hpp  ring_buffer.hpp  types.hpp
engine/tests/: CMakeLists.txt  test_auction.cpp  test_binary_protocol.cpp  test_iceberg.cpp  test_ioc_fok.cpp  test_matching_engine.cpp  test_memory_pool.cpp  test_multi_asset.cpp  test_multi_asset_parallel.cpp  test_order_book.cpp  test_pegged.cpp  test_ring_buffer.cpp  test_stop_orders.cpp  test_stress_matching.cpp  test_types.cpp
rl/: __init__.py  evaluate.py  self_play.py  self_play_env.py  trading_env.py  train_ppo.py
simulation/: __init__.py  loop.py
tests/: test_agents.py  test_data_gen.py  test_market_maker.py  test_multi_asset.py  test_replay.py  test_rl_env.py  test_self_play.py
